# brain-health-challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: analysis_of_groups.ipynb  frequency.ipynb  ml_mlm.ipynb
exploration/: 1st_steps.ipynb  exploration.ipynb  ml_feature_importance.ipynb  ml_xgboost_optimized.ipynb  xgboost_explained.ipynb
markdowns/: analysis_recommendations.ipynb
quarto/final-report/: 01-introduction.qmd  02-literature-review.qmd  03-hypotheses.qmd  04-data-exploration.qmd  05-feature-selection.qmd  06-group-definitions.qmd  07-model-selection.qmd  08-results.qmd  09-discussion.qmd  _quarto.yml  appendix-a-features.qmd  index.qmd
