[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-health-challenge"
version = "0.1.0"
description = "This project is concerned with analysing brain health data"
authors = [
  { name = "Roberto Fazekas", email = "roberto.fazekas@students.fhnw.ch" },
]
dependencies = ["pandas"]
requires-python = ">=3.13"
